k8s/mysql-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: mysql
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: mailtrain
        - name: MYSQL_PASSWORD
          value: mailtrain
        - name: MYSQL_ROOT_PASSWORD
          value: mailtrain
        - name: MYSQL_USER
          value: mailtrain
        image: mysql:5.7
        name: mysql
        args:
          - "--ignore-db-dir=lost+found"
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mailtrain-mailtrain-mysq-data
      restartPolicy: Always
      volumes:
      - name: mailtrain-mailtrain-mysq-data
        persistentVolumeClaim:
          claimName: mailtrain-mailtrain-mysq-data
status: {}
