k8s/mailtrain-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: mailtrain
  name: mailtrain
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 3000
  selector:
    io.kompose.service: mailtrain
status:
  loadBalancer: {}
